--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --cache --write .",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "next": "15.1.3",
@@ -27,6 +29,7 @@
     "eslint-plugin-react": "^7.37.3",
     "eslint-webpack-plugin": "^4.2.0",
     "globals": "^15.14.0",
+    "husky": "^9.1.7",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
