--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "next": "15.1.3",
+    "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
