--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^7.37.3",
     "eslint-webpack-plugin": "^4.2.0",
     "globals": "^15.14.0",
+    "husky": "^8.0.3",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
