--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
@@ -23,6 +24,7 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.17.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -36,6 +38,7 @@
     "eslint-webpack-plugin": "^4.2.0",
     "globals": "^15.14.0",
     "husky": "^8.0.3",
+    "install": "^0.13.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
