--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm install --frozen-lockfile
 
       - name: Build
-        run: npm build
+        run: npm run build
 
       - name: zip create
         run: zip -qq -r ./build.zip .
