--- a/ai-web-front/.eslintrc.json
+++ b/ai-web-front/.eslintrc.json
@@ -20,6 +20,7 @@
   "rules": {
     "semi": "error",
     "react/react-in-jsx-scope": "off",
+    "react-hooks/exhaustive-deps": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "off",
