--- a/ai-web-front/dockerfile
+++ b/ai-web-front/dockerfile
@@ -2,19 +2,17 @@ FROM node:20.18
 
 WORKDIR /usr/src/frontend
 
-# prisma migrate를 위한 환경 변수 설정
-ARG DATABASE_URL
-ENV DATABASE_URL=${DATABASE_URL}
-
 # 소스 코드 복사
 COPY package.json package-lock.json* ./
-RUN npm ci
+RUN npm install
 
 COPY . .
-
-# 배포용
-# RUN npm run build
-# CMD ["npm", "run", "start"]
+RUN npm run prisma:generate
 
 # 개발용
-CMD ["npm", "run", "dev:docker"]
+# CMD ["npm", "run", "dev:docker"]
+
+# 배포용
+RUN npm install pm2 -g
+RUN npm run build
+CMD ["npm", "run", "deploy:docker"]
