--- a/ai-web-front/dockerfile
+++ b/ai-web-front/dockerfile
@@ -1,4 +1,4 @@
-FROM node:20.18
+FROM node:20.18-alpine
 
 WORKDIR /usr/src/frontend
 
@@ -14,5 +14,9 @@ RUN npm run prisma:generate
 
 # 배포용
 RUN npm install pm2 -g
+
+ARG NEXT_PUBLIC_BACKEND_URL
+ENV NEXT_PUBLIC_BACKEND_URL=$NEXT_PUBLIC_BACKEND_URL
+
 RUN npm run build
 CMD ["npm", "run", "deploy:docker"]
