--- a/ai-web-front/package.json
+++ b/ai-web-front/package.json
@@ -18,7 +18,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.1.3",
+    "next": "^15.4.2",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
