--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 files:
   - source: /
     destination: /home/ec2-user/deploy
-    overwrite: yes
+file_exists_behavior: OVERWRITE
 permissions:
   - object: /home/ec2-user/deploy
     owner: ec2-user
